--- a/randomforest/advancedtrack.ipynb
+++ b/randomforest/advancedtrack.ipynb
@@ -9,19 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import necessary libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import accuracy_score, classification_report\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "import pickle\n",
     "\n",
     "\n",
     "# Daten werden eingelesen\n",
@@ -43,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -85,11 +87,11 @@
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.88      0.94      0.91       337\n",
-      "           1       0.87      0.88      0.88       321\n",
-      "           2       0.87      0.83      0.85       330\n",
-      "           3       0.85      0.79      0.82       354\n",
-      "           4       0.91      0.89      0.90       320\n",
+      "           0       0.88      0.95      0.91       337\n",
+      "           1       0.88      0.88      0.88       321\n",
+      "           2       0.87      0.82      0.84       330\n",
+      "           3       0.86      0.79      0.82       354\n",
+      "           4       0.91      0.90      0.91       320\n",
       "           5       0.82      0.88      0.85       336\n",
       "\n",
       "    accuracy                           0.87      1998\n",
@@ -100,15 +102,6 @@
     }
    ],
    "source": [
-    "# Importiere notwendige Bibliotheken\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split, cross_val_score\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import accuracy_score, classification_report\n",
-    "\n",
     "# Laden des Datensatzes\n",
     "file_path = \"merged_df.csv\"  # Pfad zu zusammengeführten Datei\n",
     "df = pd.read_csv(file_path)\n",
@@ -171,16 +164,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Modell abspeichern\n",
+    "\n",
+    "with open('random_forest_model.pkl', 'wb') as file:\n",
+    "    pickle.dump(best_model_instance, file)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Laden des Modells\n",
+    "with open('random_forest_model.pkl', 'rb') as file:\n",
+    "    best_model_instance = pickle.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1])"
+       "array([2])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
